# oddsfox-graph

./: .gitignore  README.md  pyproject.toml  selected_token_hourly_odds_20260703T095031Z.md  wc2026_token_minutely_odds_20260702T070755Z.md
.github/workflows/: ci.yml
docs/: architecture.md  artifacts.md  benchmarks.md  builds.md  cli.md  index.md
oddsfox_graph/: _diagnostic_stages.py  _edge_stages.py  build.py  calibration.py  cli.py  contracts.py  graph_snapshot.py  knockout.py  queries.py  reports.py  rules.py  schema.py  search.py  thresholds.py
oddsfox_graph/taxonomies/: wc2026.json
oddsgraph/: _diagnostic_stages.py  _edge_stages.py  artifacts.py  benchmark.py  build.py  calibration.py  cli.py  coherence.py  evaluate.py  noise.py  queries.py  reports.py  rules.py  schema.py  search.py  thresholds.py
oddsgraph/taxonomies/: wc2026.json
tests/: conftest.py  synthetic.py  test_artifacts_build.py  test_build_modes.py  test_calibration.py  test_cli.py  test_coherence.py  test_contracts.py  test_docs.py  test_evaluation.py  test_hourly_build.py  test_logic_edges.py  test_oddsgraph.py  test_schema_validation.py
tests/fixtures/: synthetic_edge_oracle.csv  wc2026_edge_oracle.csv
