[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oddsgraph"
version = "0.1.0"
description = "Build logical graph artifacts from token-level odds parquet."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["duckdb>=1.0", "scipy>=1.11", "numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
oddsgraph = "oddsgraph.cli:main"

[tool.setuptools.packages.find]
include = ["oddsgraph*"]

[tool.setuptools.package-data]
oddsgraph = ["taxonomies/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "full_output: checks that require existing output/wc2026 artifacts",
]
