[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oddsfox-graph"
version = "0.1.1"
description = "Build logical graph artifacts from token-level odds parquet."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Hypertrial"}]
dependencies = ["duckdb>=1.0", "scipy>=1.11", "numpy>=1.26", "pytz>=2024.1"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Repository = "https://github.com/hypertrial/oddsfox-graph"
DataPipeline = "https://github.com/hypertrial/oddsfox-pipeline"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
oddsfox-graph = "oddsfox_graph.cli:main"

[tool.setuptools.packages.find]
include = ["oddsfox_graph*"]

[tool.setuptools.package-data]
oddsfox_graph = ["taxonomies/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "full_output: checks that require existing output/wc2026 artifacts",
]
